SUBDIRS = ui data
pkgpyexec_PYTHON = anim.py draggable.py camcalibrator.py textarea.py\
       clusteredEventList.py eventList.py gameapp.py grabbable.py \
       mathutil.py app.py appstarter.py utils.py \
       trackerhelper.py mtemu.py geom.py parsecamargs.py apphelpers.py \
       statemachine.py coordcalibrator.py graph.py
