SUBDIRS = widget data
pkgpyexec_PYTHON = enumcompat.py camcalibrator.py textarea.py gameapp.py \
       mathutil.py app.py appstarter.py utils.py filter.py \
       mtemu.py geom.py parsecamargs.py apphelpers.py methodref.py \
       statemachine.py coordcalibrator.py graph.py __init__.py gesture.py 
