EXTRA_DIST = 1x1_schachbrett.png panoimage.jpg freidrehen.jpg widebmp.jpg \
rgb24.png rgb24alpha.tif \
camera.avg events.avg panoimage.avg videoperformance.avg crop.avg parport.avg \
testserial.avg crop2.avg hugeimage.avg text.avg alphaimage.avg empty.avg image.avg \
unicode.avg avg.avg noavg.avg video.avg blend.avg errevent.avg noxml.avg videofmt.avg \
test.m2v test.m1v \
videoperformance.py Test.py TestPar.py parport.py

TESTS=test.py
