EXTRA_DIST = 1x1_schachbrett.png panoimage.png freidrehen.jpg widebmp.jpg \
rgb24-65x65.png rgb24-64x64.png rgb24alpha-64x64.png rgb24alpha.tif \
rgba-48x48.mov \
camera.avg events.avg panoimage.avg videoperformance.avg crop.avg parport.avg \
testserial.avg crop2.avg hugeimage.avg text.avg image.avg \
avg.avg noavg.avg noavg2.avg video.avg blend.avg errevent.avg noxml.avg videofmt.avg \
test.m2v test.m1v invalidfilename.avg \
videoperformance.py Test.py TestPar.py parport.py

TESTS=Test.py
