bin_SCRIPTS = avg_audioplayer.py avg_chromakey.py avg_showcamera.py avg_showfile.py \
        avg_showfont.py avg_videoinfo.py avg_videoplayer.py avg_checkvsync.py \
        avg_checktouch.py avg_showsvg.py avg_checkspeed.py \
        avg_checkpolygonspeed.py avg_jitterfilter.py
pkgpyexec_PYTHON = $(bin_SCRIPTS)
